# tlos

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  foundry.toml
.beads/: issues.jsonl
.devin/: wiki.json
cache/: solidity-files-cache.json  test-failures
contracts/: TLOS.sol  TLOSKeccak.sol  TLOSLWE.sol  TLOSOptimized.sol  TLOSSeedA.sol  TLOSWithPuzzle.sol  TLOSWithPuzzleV2.sol  TLOSWithPuzzleV3.sol  TLOSWithPuzzleV4.sol  WeakLWEPuzzle.sol  WeakLWEPuzzleV2.sol  WeakLWEPuzzleV4.sol  WeakLWEPuzzleV5.sol  WeakLWEPuzzleV6.sol  WeakLWEPuzzleV7.sol
docs/: SECURITY_OPTIMIZATION_ANALYSIS.md  reviewer-letter-lwe-fix.md  security.md  seh-wire-binding.md  wire-binding.md
examples/: TLOSDeadManSwitch.sol  TLOSKitties.sol  TLOSRecovery.sol  TLOSSealedAuction.sol  TLOSStopLoss.sol  TLOSTreasureHunt.sol  TLOSVault.sol
paper/: macros.tex  refs.bib  tlo-paper.tex  tlo.tex  tlos-paper.aux  tlos-paper.bbl  tlos-paper.blg  tlos-paper.out  tlos-paper.tex  tlos.aux  tlos.out  tlos.tex
scripts/: BenchmarkTLOS.s.sol  BenchmarkTLOSOptimized.s.sol  BenchmarkTLOSSeedA.s.sol  BenchmarkTLOSV3.s.sol  gpu_attack_benchmark.py  gpu_attack_benchmark_torch.py  gpu_puzzle_benchmark_remote.py  lblo_attack.py  lblo_attack_long.py  sage_lwe_estimator.sage  tlos_break.py  tlos_estimator.sage  weak_lwe_gpu_benchmark.py
src/: algebraic_mixing.rs  circuit.rs  generator.rs  lblo.rs  lib.rs  lwe.rs  seh.rs  seh_lwe.rs  transcript.rs  wire_binding.rs
test/: PuzzleVariants.t.sol  TLOSDeadManSwitch.t.sol  TLOSIntegration.t.sol  TLOSRecovery.t.sol  TLOSSealedAuction.t.sol  (+12 more)
(+34 files in other folders)
