[package]
name = "tlos"
version = "0.1.0"
edition = "2021"
description = "TLOS circuit generation with Subspace-Evasive Hashing"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate_tlos"
path = "src/bin/generate_tlos.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
